--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,10 +28,11 @@ body {
 }  
  
 #graph-container {
-	height: 600px;
-	min-width: 100%;
-    background: #fff;
-    margin: 0 auto;
+	top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
 }
 
 /* ==========================================================================
