--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,24 +7,52 @@ body {
 }
 
 
+
 /* ==========================================================================
    First page
    ========================================================================== */
 .search {
     height: 45px;
+    margin-top: 65px;
+}
+
+.col-center {
+  text-align: center
 }
 
 .header {
-    height: 150px;
-      display: table-cell;
-      vertical-align: middle;    
+  width: 100%;
+  height: 250px;
+  background-image: url('../img/demo-banner.png');
+  background-size: cover;
+  margin-bottom: 50px;
+}
+
+.header img {
+  width:100%;
+}
+
+.logo {
+  color:#fff;
+  font-weight:800;
+  font-size:14pt;
+  padding:25px;
+  text-align:center;
+}
+
+.line {
+  padding-top:20px;
+  white-space:no-wrap;
+  overflow:hidden;
+  text-align:center;
 }
 
 /* ==========================================================================
    Custom styling
    ========================================================================== */
 .centered-text {
-    text-align:center
+    text-align:center;
+    color: rgba(116, 114, 114, 1);
 }  
  
 #graph-container {
