Graph style + list of selected node neighbours

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,11 +77,18 @@ body {
 }  
  
 #graph-container {
-	height: 700px;
+	height: 750px;
   width: 100%;
-  background-color: #dedede;
-  border-left: 5px solid;
-  border-bottom: 5px solid;
+  border-left: 2px solid;
+
+}
+
+/* ==========================================================================
+   Padding
+   ========================================================================== */
+
+.paddingLeft25{
+  padding-left: 25px;
 }
 
 /* ==========================================================================
@@ -95,6 +102,11 @@ body {
 /* ==========================================================================
    Spaces
    ========================================================================== */
+
+.space5 {
+    height: 5px;
+    clear: both;
+}
 .space20 {
     height: 20px;
     clear: both;
