--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,7 +39,7 @@ body {
 .header {
     width: 100%;
     height: 250px;
-    background-image: url('../img/demo-banner.png');
+   /** background-image: url('../img/demo-banner.png'); */
     background-size: cover;
     margin-bottom: 50px;
 }
