Some bugs fixed (list display, refresh error, node zoom...)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -88,10 +88,14 @@ body {
 }  
  
 #graph-container {
-	height: 750px;
-  width: 100%;
-  border-left: 2px solid;
+    height: 750px;
+    width: 100%;
+    /**border-left: 2px solid;*/
 
+}
+
+.list-group-item>.badge {
+    float: none;
 }
 
 /* ==========================================================================
