--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,6 +100,12 @@ body {
     float: none;
 }
 
+#loader {
+  display: block;
+  margin: 200px auto;
+  z-index: 100;
+}
+
 /* ==========================================================================
    Padding
    ========================================================================== */
