--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 /* ==========================================================================
    Basic styling
    ========================================================================== */
+
 html {
     height: 100%;
 }
@@ -11,8 +12,6 @@ body {
     padding-bottom: 20px;
     color: #333;
 }
-
-
 
 .font-size-11 {
     font-size: 11px;
@@ -30,6 +29,7 @@ body {
 /* ==========================================================================
    First page
    ========================================================================== */
+
 .search {
     height: 45px;
     margin-top: 65px;
@@ -42,13 +42,17 @@ body {
 .header {
     width: 100%;
     height: 250px;
-   /** background-image: url('../img/demo-banner.png'); */
     background-size: cover;
     margin-bottom: 50px;
 }
 
 .header img {
     width:100%;
+}
+
+.fa-big {
+    font-size: 50px;
+    color: #222;
 }
 
 .logo {
@@ -83,8 +87,9 @@ body {
 }
 
 /* ==========================================================================
-   Custom styling
+   Graph styling
    ========================================================================== */
+
 .centered-text {
     text-align:center;
     color: rgba(116, 114, 114, 1);
@@ -94,7 +99,6 @@ body {
     height: 750px;
     width: 100%;
     /**border-left: 2px solid;*/
-
 }
 
 .list-group-item>.badge {
@@ -115,6 +119,15 @@ body {
 .legend li {
     font-size: 20px;
 }
+
+/* ==========================================================================
+   Search bar
+   ========================================================================== */
+
+.search-containter {
+   /** background-color: rgba(228, 228, 228, 0.59); */
+}
+
 
 /* ==========================================================================
    Padding
