--- a/public/css/main.css
+++ b/public/css/main.css
@@ -101,6 +101,12 @@ body {
     /**border-left: 2px solid;*/
 }
 
+#graph {
+    height: 750px;
+    width: 100%;
+    /**border-left: 2px solid;*/
+}
+
 .list-group-item>.badge {
     float: none;
 }
