--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,11 +133,14 @@ body {
 }
 
 /* ==========================================================================
-   Search bar
+   Autocomplete
    ========================================================================== */
 
-.search-containter {
-   /** background-color: rgba(228, 228, 228, 0.59); */
+.autocomplete {
+    max-height: 400px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    z-index: 999;
 }
 
 
