Autocomplete on first page...

--- a/app/template/navigation.html
+++ b/app/template/navigation.html
@@ -21,13 +21,13 @@
                     role="button" aria-expanded="false">Prikazi <span class="caret"></span></a>
                     <ul id="storzic-dropdown" class="dropdown-menu" role="menu">
                         <li>
-                            <a href="/demo/#/mainGraph/undefined">Lokacijski graf</a>
+                            <a href="/vojf/#/mainGraph/undefined">Lokacijski graf</a>
                         </li>
                         <li>
-                            <a href="/demo/#/categoryGraph/undefined">Kategoriziran graf</a>
+                            <a href="/vojf/#/categoryGraph/undefined">Kategoriziran graf</a>
                         </li>
                         <li>
-                            <a href="/demo/#/atlasGraph/undefined">Kategoriziran graf 2</a>
+                            <a href="/vojf/#/atlasGraph/undefined">Kategoriziran graf 2</a>
                         </li>
                     </ul>
                 </li>
