Search bar fixed...

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -132,17 +132,13 @@ body {
     font-size: 20px;
 }
 
+
 /* ==========================================================================
-   Autocomplete
+   Search
    ========================================================================== */
-
-.autocomplete {
-    max-height: 400px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    z-index: 999;
+.search-containter {
+    margin-top: 25px;
 }
-
 
 /* ==========================================================================
    Padding
