--- a/app/template/navigation.html
+++ b/app/template/navigation.html
@@ -18,7 +18,7 @@
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown"
-                    role="button" aria-expanded="false">Prikazi <span class="caret"></span></a>
+                    role="button" aria-expanded="false">{{selectedItem}} <span class="caret"></span></a>
                     <ul id="storzic-dropdown" class="dropdown-menu" role="menu">
                         <li>
                             <a href="/vojf/#/mainGraph/undefined">Lokacijski graf</a>
