Category graph connected to API

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -132,6 +132,9 @@ body {
     font-size: 20px;
 }
 
+.border-radius-0 {
+    border-radius: 0 !important;
+}
 
 /* ==========================================================================
    Search
