--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,7 +19,9 @@ body {
 
 .scrollable {
     overflow: auto;
-    height: 400px;
+    max-height: 400px;
+    box-shadow: none;
+    border-radius: 0;
 }
 
 [ng-click] {
@@ -29,6 +31,9 @@ body {
 /* ==========================================================================
    First page
    ========================================================================== */
+.border-fix {
+  border-radius: 0 !important;
+}
 
 .search {
     height: 45px;
@@ -71,9 +76,7 @@ body {
 }
 
 .footer {
-    position: absolute;
     width: 100%;
-    bottom: 0;
     height: 40px;
     background-image: -webkit-linear-gradient(top,#3c3c3c 0,#222 100%);
     background-image: -o-linear-gradient(top,#3c3c3c 0,#222 100%);
@@ -93,8 +96,8 @@ body {
 .centered-text {
     text-align:center;
     color: rgba(116, 114, 114, 1);
-}  
- 
+}
+
 #graph-container {
     height: 750px;
     width: 100%;
@@ -102,7 +105,7 @@ body {
 }
 
 #graph {
-    height: 750px;
+    height: 600px;
     width: 100%;
     /**border-left: 2px solid;*/
 }
@@ -129,12 +132,29 @@ body {
 }
 
 .legend li {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .border-radius-0 {
     border-radius: 0 !important;
 }
+
+
+
+/* ==========================================================================
+   Tabs
+   ========================================================================== */
+
+.basic-info p {
+  padding: 15px 0 0 0;
+  font-size: 12px;
+  margin-bottom: -5px;
+}
+.list-group-item:first-child {
+   border-top-left-radius: 0;
+   border-top-right-radius: 0;
+}
+
 
 /* ==========================================================================
    Search
