--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,16 +77,23 @@ body {
 
 .footer {
     width: 100%;
-    height: 40px;
-    background-image: -webkit-linear-gradient(top,#3c3c3c 0,#222 100%);
+    height: 60px;
+    padding-top: 10px;
+    background-color: whitesmoke;
+    border-top: 1px solid #777777;
+    /**background-image: -webkit-linear-gradient(top,#3c3c3c 0,#222 100%);
     background-image: -o-linear-gradient(top,#3c3c3c 0,#222 100%);
     background-image: -webkit-gradient(linear,left top,left bottom,from(#3c3c3c),to(#222));
-    background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);
+    background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%); *//
 }
 
 .footer-text {
     padding-top: 10px;
     color: #9d9d9d;
+}
+
+.logo-footer img {
+    opacity: 0.7;
 }
 
 /* ==========================================================================
